# agent-activity-hub

./: .gitignore  Cargo.toml  README-cn.md  README.md  多智能体桌面状态中心一体化实施方案.md  待办.md
.github/workflows/: ci.yml
apps/agent-activity-desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/agent-activity-desktop/src/: App.tsx  Esp32SettingsPanel.tsx  LedSettingsPanel.test.ts  LedSettingsPanel.tsx  TrafficLight.test.ts  TrafficLight.tsx  adapterStatus.test.ts  adapterStatus.ts  floatingLightPreferences.test.ts  floatingLightPreferences.ts  floatingSessions.test.ts  floatingSessions.ts  i18n.test.ts  i18n.ts  ledEffects.test.ts  ledEffects.ts  main.tsx  sessionActions.test.ts  sessionActions.ts  status.test.ts  status.ts  styles.css  types.ts  useActivity.ts
apps/agent-activity-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent-activity-desktop/src-tauri/capabilities/: default.json
apps/agent-activity-desktop/src-tauri/icons/: icon.icns
apps/agent-activity-desktop/src-tauri/src/: claude_session.rs  codex_session.rs  esp32.rs  hook_config.rs  led.rs  main.rs  qoder_session.rs
docs/: architecture-cn.md  implementation-status.md  macos-unsigned-install-cn.md  provider-support.md
firmware/esp32-traffic-light/: README-cn.md  platformio.ini
firmware/esp32-traffic-light/src/: main.cpp
fixtures/agent_activity/codex/: other-session-working.json  permission-request.json  post-tool-use.json
fixtures/agent_activity/qoder/: permission-request.json  post-tool-use.json  stop.json
native/agent-activity/activity-core/: Cargo.toml
native/agent-activity/activity-core/src/: lib.rs
native/agent-activity/activity-hook/: Cargo.toml
native/agent-activity/activity-hook/src/: main.rs
native/agent-activity/activity-ipc/: Cargo.toml
native/agent-activity/activity-ipc/src/: lib.rs
native/agent-activity/activity-protocol/: Cargo.toml
native/agent-activity/activity-protocol/src/: lib.rs
native/agent-activity/activity-store/: Cargo.toml
native/agent-activity/activity-store/src/: lib.rs
sdk/protocol-schema/: agent-activity-v1.schema.json  agent-intervention-v1.schema.json
skills/agent-activity-hub-install/: SKILL.md
skills/agent-activity-hub-install/agents/: openai.yaml
skills/agent-activity-hub-install/scripts/: install_agent_activity_hub.sh
tools/: claude_hooks.mjs  clean_generated.mjs  codex_hooks.mjs  gen_icon.py  prepare_hook_sidecar.mjs  qoder_hooks.mjs  tauri_cli.mjs  verify_concurrent_multistate.zsh  verify_multi_agent_lifecycle.zsh
