[workspace]
resolver = "2"
members = [
  "native/agent-activity/activity-protocol",
  "native/agent-activity/activity-core",
  "native/agent-activity/activity-ipc",
  "native/agent-activity/activity-store",
  "native/agent-activity/activity-hook",
  "apps/agent-activity-desktop/src-tauri",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
rust-version = "1.77"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1.16", features = ["v4", "serde"] }
