[package]
name = "activity-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "agent-activity-hook"
path = "src/main.rs"

[dependencies]
activity-ipc = { path = "../activity-ipc" }
activity-protocol = { path = "../activity-protocol" }
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

