[package]
name = "activity-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
activity-protocol = { path = "../activity-protocol" }
anyhow.workspace = true
async-trait.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

