[package]
name = "activity-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
activity-core = { path = "../activity-core" }
activity-protocol = { path = "../activity-protocol" }
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde_json.workspace = true

